Minor responsive layout issues are fixed.

--- a/src/app/layouts/default/assets/styles.less
+++ b/src/app/layouts/default/assets/styles.less
@@ -29,3 +29,13 @@
         color: rgba(255, 255, 255, 0.5);
     }
 }
+
+.pushable:not(body) {
+    transform: none;
+}
+
+.pushable:not(body) > .ui.sidebar,
+.pushable:not(body) > .fixed,
+.pushable:not(body) > .pusher:after {
+    position: fixed;
+}
