--- a/src/app/pages/home/styles.less
+++ b/src/app/pages/home/styles.less
@@ -38,7 +38,7 @@
 .asym-clip {
     background-color: #007CC4;
     width: 100%;
-    height: 10vw;
+    height: 8em;
 }
 
 .ui.button.button-below-image {
